# Sort_Maptool_CPP

./: .gitignore  CMakeLists.txt  CMakePresets.json  codex.patch  vcpkg.json
src/: main.cpp
src/core/: Generator.cpp  Generator.cpp.rej  Generator.hpp  Generator.hpp.rej  Solver.cpp  Solver.hpp  State.cpp  State.hpp  Types.hpp
src/io/: Csv.cpp  Csv.hpp
src/ui/: App.cpp  App.hpp
